--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ code {
 .navbarcontainer h4 {
   padding-left: 50px;
   font-style: italic;
+  padding-bottom: 25px;
 }
 
 nav {
@@ -41,6 +42,7 @@ nav {
   display: inline-block;
   padding-left: 30px;
   text-decoration: none;
+  font-size: 22px;
 }
 
 .currentUser {
@@ -53,7 +55,10 @@ nav {
 .currentUser p {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 600;
-  font-size: 18px;
+  font-size: 15px;
+  padding-left: 50px;
+  padding-right: 50px;
+  margin-top: 11px;
 }
 
 .logout {
@@ -116,7 +121,6 @@ nav {
   height: auto;
   margin-left: auto;
   margin-right: auto;
-
   padding-top: 30px;
 }
 .tab {
@@ -203,4 +207,165 @@ nav {
   margin: 4px 2px;
   cursor: pointer;
   background-color: #008cba;
+}
+
+.detail-container {
+}
+
+.questiondetail-container {
+  width: 700px;
+  border-style: dotted;
+  border-color: rgb(170, 207, 231);
+  margin-top: 100px;
+  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 30px;
+  padding-right: 30px;
+}
+
+.questiondetail-info {
+  display: flex;
+  flex-direction: row;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.questiondetail-title {
+  font-size: 22px;
+  font-weight: 900;
+  margin-left: 30px;
+  margin-right: auto;
+  text-align: left;
+}
+
+.questiondetail-avatar {
+  margin-bottom: auto;
+  margin-top: auto;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.questiondetail-avatar img {
+  height: 160px;
+  border-radius: 50%;
+}
+
+.questiondetail-optionOne {
+  border-style: double;
+  border-color: rgb(175, 177, 177);
+  margin-bottom: 20px;
+  padding: 20px;
+}
+
+.questiondetail-optionTwo {
+  border-style: double;
+  border-color: rgb(175, 177, 177);
+  padding: 20px;
+}
+
+.questiondetail-content h2 {
+  color: rgb(68, 70, 70);
+}
+
+.detail-q {
+  color: rgb(20, 111, 196);
+  font-size: 22px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 900;
+}
+
+.q-percentage {
+  color: rgb(20, 111, 196);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 600;
+}
+
+.questionform h3 {
+  font-size: 30px;
+}
+
+.questionanswer-submit {
+  width: 330px;
+  height: 43px;
+  margin-top: 50px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 700;
+  font-size: 17px;
+}
+
+#newquestion-container {
+  margin: 130px;
+}
+
+#newquestion-container h2 {
+  font-weight: ;
+}
+
+#form {
+  width: 600px;
+}
+
+#form h4 {
+  justify-content: center;
+  align-content: center;
+}
+
+#addbutton {
+  margin-top: 55px;
+  width: 100px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 600;
+}
+
+.leaderboard-container {
+  width: 700px;
+  height: 250px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  border-style: dotted;
+  border-color: lightblue;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 55px;
+  flex-grow: 1 2 1;
+}
+
+#leaderboard-img {
+  margin-top: 36px;
+  height: 170px;
+  border-radius: 50%;
+}
+
+#leaderboard-info {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+#leader-q {
+  text-align: justify;
+  font-size: 20px;
+}
+
+#leaderboard-score {
+  margin-top: auto;
+  margin-bottom: auto;
+  border-style: double;
+  border-color: lightgray;
+  padding: 40px;
+}
+
+#leaderboard-score h4 {
+  font-size: 22px;
+}
+
+#score {
+  margin-left: 20px;
+  font-size: 30px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
+  margin-top: 45px;
 }
