--- a/src/index.css
+++ b/src/index.css
@@ -277,7 +277,7 @@ nav {
   font-weight: 900;
 }
 
-.q-percentage {
+#q-percentage {
   color: rgb(20, 111, 196);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 600;
